[tool.poetry]
name = "itineraries"
version = "0.1.0"
description = "Sorting itineraries operation REST API."
authors = ["Barbora Tutu <barboratutu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pydantic = "^2.5.1"
cachetools = "^5.3.2"
requests = "^2.31.0"
types-cachetools = "^5.3.0.7"
types-requests = "^2.31.0.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-httpx = "^0.27.0"
black = "^23.11.0"
mypy = "^1.7.0"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
